# issen-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
problem/: fforum-60-79.obf  opening.obf  stress_test_54_1k.b81r
src/: bits.rs  board.rs  book.rs  compression.rs  engine.rs  eval.rs  main.rs  play.rs  playout.rs  record.rs  remote.rs  search.rs  serialize.rs  setup.rs  sparse_mat.rs  table.rs  think.rs  train.rs
src/compression/: test.rs
src/engine/: bits.rs  board.rs  endgame.rs  eval.rs  hand.rs  last_cache.rs  last_flip_cache.rs  midgame.rs  nnue_eval.rs  pattern_eval.rs  remote.rs  search.rs  table.rs  think.rs
src/engine/board/: test.rs
src/engine/endgame/: test.rs
src/engine/eval/: test.rs
src/engine/last_cache/: test.rs
src/engine/nnue_eval/: test.rs
src/engine/pattern_eval/: test.rs
src/engine/search/: test.rs
src/record/: test.rs
src/serialize/: test.rs
