[package]
edition = '2021'
name = "issen-rs"
version = "0.2.0"
authors = ["prime <prime@kmc.gr.jp>"]

[dependencies]
bitintr = "0.3"
lazy_static = "1.4"
rand = { version = "0.8", features = ["small_rng"] }
rand_xoshiro = "0.6"
futures = { version = "0.3", features = ["std"] }
yaml-rust = "0.4"
spin = "0.7"
clap = "4.2"
rayon = "1.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
tokio = { version = "1.2" , features = ["full"] }
hyper = { version = "0.14", features = ["server"] }
reqwest = { version = "0.11.12", features = ["json"], default-features = false }
crc64 = "2.0.0"
anyhow = "1.0"
thiserror = "1.0"
arrayvec = "0.7.4"
num_cpus = "1.16.0"
async-recursion = "1.0"
