[package]
edition = '2021'
name = "issen-rs"
version = "0.2.0"
authors = ["prime <prime@kmc.gr.jp>"]

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
rand_xoshiro = "0.6"
futures = { version = "0.3", features = ["std"] }
yaml-rust = "0.4"
spin = "0.7"
clap = "4.2"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36" , features = ["full"] }
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.11", features = ["json"], default-features = false }
crc64 = "2.0"
anyhow = "1.0"
thiserror = "1.0"
arrayvec = "0.7"
num_cpus = "1.16"
async-recursion = "1.0"
dashmap = "5.5"
